force-app/main/default/objects/Form_Allocation__c/Form_Allocation__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child object of Form Setting. It will contain the list of forms and manuals based on user type.</description>
    <label>Form Allocation</label>
    <nameField>
        <label>Form Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>