force-app/main/default/objects/Form_Allocation__c/fields/Allow_Submissions_after_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Allow_Submissions_after_Due_date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to define whether to Allow Submissions after Due date or not</description>
    <inlineHelpText>Whether to Allow Submissions after Due date or not</inlineHelpText>
    <label>Allow Submissions after Due date</label>
    <type>Checkbox</type>
</CustomField>