force-app/main/default/objects/Form_Allocation__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check if form is required or not</description>
    <label>Approval Required?</label>
    <type>Checkbox</type>
</CustomField>