force-app/main/default/objects/Form_Allocation__c/fields/CountMultiSubmission__c.field-meta.xml
<CustomField>
    <fullName>CountMultiSubmission__c</fullName>
    <formula>IF( TEXT(Form_Entry__c) == &apos;Multiple Per Account&apos; , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountMultiSubmission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>