force-app/main/default/objects/Form_Allocation__c/fields/Email_To__c.field-meta.xml
<CustomField>
    <fullName>Email_To__c</fullName>
    <description>For adding email ids for whom the form submission response to be sent to.</description>
    <label>Email To</label>
    <type>TextArea</type>
</CustomField>