force-app/main/default/objects/Form_Allocation__c/fields/Entry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Entry_Limit__c</fullName>
    <label>Entry Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>