force-app/main/default/objects/Form_Allocation__c/fields/Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>Feature_Category__c</fullName>
    <description>Define the category of the Form e.g. Form/Manual/Badges</description>
    <label>Feature Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Badges</fullName>
                <isActive>false</isActive>
                <label>Badges</label>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Heavy Machinery</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Stand Contractor</fullName>
                <isActive>false</isActive>
                <label>Stand Contractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>