force-app/main/default/objects/Form_Allocation__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Girikon form object(Questionnaire object)</description>
    <label>Form</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Form Allocations</relationshipLabel>
    <relationshipName>Form_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>