force-app/main/default/objects/Form_Allocation__c/fields/Form_Category__c.field-meta.xml
<CustomField>
    <fullName>Form_Category__c</fullName>
    <description>Define the form category belongs to</description>
    <label>Form Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feature_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party form</fullName>
            </value>
            <value>
                <fullName>Marketing Form</fullName>
            </value>
            <value>
                <fullName>Operational Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>