force-app/main/default/objects/Form_Allocation__c/fields/Form_Entry__c.field-meta.xml
<CustomField>
    <fullName>Form_Entry__c</fullName>
    <label>Form Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Multiple Per Account</fullName>
            </value>
            <value>
                <fullName>Multiple Per Booth</fullName>
            </value>
            <value>
                <fullName>One Per Account</fullName>
                <default>true</default>
                <label>One Per Account</label>
            </value>
            <value>
                <fullName>One Per Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>