force-app/main/default/objects/Form_Allocation__c/fields/Form_Heading__c.field-meta.xml
<CustomField>
    <fullName>Form_Heading__c</fullName>
    <description>Defines under which form heading forms will appear</description>
    <label>Form Heading</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feature_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>