force-app/main/default/objects/Form_Allocation__c/fields/Form_Provider__c.field-meta.xml
<CustomField>
    <fullName>Form_Provider__c</fullName>
    <description>Use to capture the form provider details</description>
    <label>Form Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>