force-app/main/default/objects/Form_Allocation__c/fields/Form_Setting__c.field-meta.xml
<CustomField>
    <fullName>Form_Setting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Form Setting.</description>
    <label>Form Setting</label>
    <referenceTo>Form_Setting__c</referenceTo>
    <relationshipLabel>Form Allocations</relationshipLabel>
    <relationshipName>Form_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>