force-app/main/default/objects/Form_Allocation__c/fields/Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Status__c</fullName>
    <description>Define form status</description>
    <label>Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
                <isActive>false</isActive>
                <label>In progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>