force-app/main/default/objects/Form_Allocation__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Placeholder to keep formula field Form Type from Form Object</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feature_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>