force-app/main/default/objects/Form_Allocation__c/fields/Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Form_Url__c</fullName>
    <description>Defines 3rd party links for user to fill in external form details</description>
    <label>Form Url</label>
    <type>Url</type>
</CustomField>