force-app/main/default/objects/Form_Allocation__c/fields/Is_Required_For_Stand_Design__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_For_Stand_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, means form is required, if not means Optional</description>
    <label>Is Required For Stand Design?</label>
    <type>Checkbox</type>
</CustomField>