force-app/main/default/objects/Form_Allocation__c/fields/Ops_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Ops_Reminder_Date__c</fullName>
    <description>This date fields helps to set reminder dates for forms view it in list views and reports as required for every event.</description>
    <label>Ops Reminder Date</label>
    <type>Date</type>
</CustomField>