force-app/main/default/objects/Form_Allocation__c/fields/Send_individual_forms__c.field-meta.xml
<CustomField>
    <fullName>Send_individual_forms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To control whether to send email to mentioned email ids in the Email To field</description>
    <inlineHelpText>To control whether to send email to mentioned email ids in the Email To field</inlineHelpText>
    <label>Send individual forms</label>
    <type>Checkbox</type>
</CustomField>