force-app/main/default/objects/Form_Allocation__c/fields/Send_Response_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Send_Response_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then customer will see an option to receive a copy of online form response.</description>
    <label>Send Response to Customer</label>
    <type>Checkbox</type>
</CustomField>