force-app/main/default/objects/Form_Allocation__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <description>This filed is used to define the submission deadline date for the form submission.</description>
    <inlineHelpText>Submission deadline date for the form submission</inlineHelpText>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>