force-app/main/default/objects/Form_Allocation__c/validationRules/Validate_Email_to_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_to_field</fullName>
    <active>true</active>
    <description>Validate Email to field when send individual form checkbox is checked</description>
    <errorConditionFormula>IF( (Send_individual_forms__c = true  &amp;&amp;  Email_To__c =&apos;&apos;), true, false)</errorConditionFormula>
    <errorDisplayField>Email_To__c</errorDisplayField>
    <errorMessage>Email to can not be blanked if Send Individual forms is true</errorMessage>
</ValidationRule>