force-app/main/default/objects/Form_Allocation__c/validationRules/Validate_form_heading_if_it_is_form.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_form_heading_if_it_is_form</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Feature_Category__c , &apos;Form&apos;) &amp;&amp;   ISPICKVAL( Form_Heading__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Form_Heading__c</errorDisplayField>
    <errorMessage>Form Heading can not be blank</errorMessage>
</ValidationRule>