force-app/main/default/objects/Form_Allocation__c/validationRules/Validate_formUrl_field_for_Link_forms.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_formUrl_field_for_Link_forms</fullName>
    <active>true</active>
    <description>Validate form Url field when form type is Link</description>
    <errorConditionFormula>ISPICKVAL( Form_Type__c , &apos;Link&apos;) &amp;&amp; (ISBLANK( Form_Url__c ))</errorConditionFormula>
    <errorDisplayField>Form_Url__c</errorDisplayField>
    <errorMessage>Form Url can not be blank if form type is &apos;Link&apos;</errorMessage>
</ValidationRule>