force-app/main/default/objects/Form_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Type__c</columns>
    <columns>Form__c</columns>
    <columns>Form_Provider__c</columns>
    <columns>Form_Status__c</columns>
    <columns>Ops_Reminder_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Form_Setting__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_Heading__c</columns>
    <columns>Entry_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Heading__c</field>
        <operation>equals</operation>
        <value>Mandatory</value>
    </filters>
    <label>All</label>
</ListView>